syntax = "proto3";

option java_package = "com.thoughtworks.go.protobufs.registration";
option java_outer_classname = "Registration";
option java_multiple_files = true;

message TokenProto {
    string token = 1;
}

message UUIDProto {
    string uuid = 1;
}

message CookieProto {
    string cookie = 1;
}

message AgentAutoRegistrationProto {
    string hostname = 1;
    string elastic_agent_id = 2;
    string elastic_plugin_id = 3;
    repeated string environments = 4;
    repeated string resources = 5;
}

message AgentMetaProto {
    string uuid = 1;
    string hostname = 2;
    string location = 3;
    int64 usable_space = 4;
    string operating_system = 5;
    string ip_address = 6;
}

message RegistrationProto {
    AgentMetaProto agent_meta = 1;
    AgentAutoRegistrationProto auto_register = 2;
}