syntax = "proto3";

import "tasks.proto";
import "git.proto";

option java_package = "com.thoughtworks.go.protobufs.work";
option java_multiple_files = true;
option java_outer_classname = "BuildWork";

message WorkProto {
    ProtoJobIdentifier jobIdentifier = 1;
    repeated MaterialProto material = 2;
    repeated ProtoExec task = 3;
}

message MaterialProto {
    oneof material {
        GitProto git = 1;
    }
}